deploy/openshift/cluster/patch-deployment-env.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hawtio-online
  namespace: hawtio
spec:
  template:
    spec:
      containers:
        - name: hawtio-online
