deploy/openshift/cluster/patch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hawtio-online
  namespace: hawtio
spec:
  template:
    spec:
      containers:
        - name: hawtio-online
          volumeMounts:
            - name: hawtio-online-tls-proxying
              mountPath: /etc/tls/private/proxying
      volumes:
        - name: hawtio-online-tls-proxying
          secret:
            secretName: hawtio-online-tls-proxying
