deploy/openshift/cluster/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hawtio-online
  labels:
    app: hawtio
spec:
  to:
    kind: Service
    name: hawtio-online
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
